fixed z-index for nav to stay on top

--- a/client/static/stylesheets/portfolio.css
+++ b/client/static/stylesheets/portfolio.css
@@ -75,6 +75,7 @@ body
 nav{
   background-color: transparent !important;
   transition: background-color 0.5s ease;
+  z-index: 10;
 }
 .side-nav{
   z-index: 11;
